Bug 495927 - Application Dashboard launches shifted to the side after switching to a different resolution monitor
Summary: Application Dashboard launches shifted to the side after switching to a diffe...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Application Dashboard widget (other bugs)
Version First Reported In: 6.2.4
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-11-07 17:07 UTC by Andrin Winzap
Modified: 2025-10-01 22:37 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.0
Sentry Crash Report:


Attachments
screenshot of shifted Application Dashboard (3.69 MB, image/png)
2024-11-07 17:07 UTC, Andrin Winzap
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andrin Winzap 2024-11-07 17:07:46 UTC
Created attachment 175625 [details]
screenshot of shifted Application Dashboard

SUMMARY
Application Dashboard launches shifted to the side after switching to a different resolution monitor

STEPS TO REPRODUCE
1.  Open Application Dashboard
2.  Switch to a different resolution display (as primary)
3.  Open Application Dashboard again

OBSERVED RESULT
Content is shifted to the side

EXPECTED RESULT
Content centered

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.2.3
KDE Frameworks Version: 6.7.0
Qt Version: 6.8.0
Kernel Version: 6.11.6-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 7735U with Radeon Graphics
Memory: 13.3 GiB of RAM
Graphics Processor: AMD Radeon Graphics

ADDITIONAL INFORMATION
Comment 1 Nate Graham 2025-04-16 19:06:45 UTC
Sorry we were not able to get to this issue yet! I can't reproduce this in current git master. Can you reproduce it in Plasma 6.3.4 or later?
Comment 2 Andrin Winzap 2025-04-16 19:24:31 UTC
Yes, I am still experiencing the issue on Fedora 42 with Plasma 6.3.4.
Comment 3 Vinícius 2025-07-11 20:20:31 UTC
i can confirm this too, and i can reproduce when consistently switching between external and laptop screen(win + p) and opening dashboard in it, the screens must have a different scale factor from each other

Operating System: Fedora Linux 42
KDE Plasma Version: 6.4.2
KDE Frameworks Version: 6.15.0
Qt Version: 6.9.1
Kernel Version: 6.15.5-200.fc42.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 5700U with Radeon Graphics
Memory: 8 GiB of RAM (7,1 GiB usable)
Graphics Processor: AMD Radeon Graphics
Manufacturer: LENOVO
Product Name: 82MF
System Version: IdeaPad 3 15ALC6
Comment 4 Bug Janitor Service 2025-09-30 14:49:49 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5878
Comment 5 Niccolò Venerandi 2025-10-01 11:40:14 UTC
Git commit 8c48ca59136288cc18da86b92de6ce0603924b2b by Niccolò Venerandi.
Committed on 01/10/2025 at 11:40.
Pushed by niccolove into branch 'master'.

Make Dashboard not call resize just before showing full screen

The call to showFullScreen will set the correct size for the screen;
adding another call to resize just before showing will make the content
preserve the old incorrect geometry, which is visible when using the
dashboard after changing the scaling factor.

M  +0    -1    applets/kicker/dashboardwindow.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/8c48ca59136288cc18da86b92de6ce0603924b2b
Comment 6 Niccolò Venerandi 2025-10-01 11:40:29 UTC
Git commit 661f35893946bbdfa886d703670108cf1a9e66dd by Niccolò Venerandi.
Committed on 01/10/2025 at 11:40.
Pushed by niccolove into branch 'Plasma/6.5'.

Make Dashboard not call resize just before showing full screen

The call to showFullScreen will set the correct size for the screen;
adding another call to resize just before showing will make the content
preserve the old incorrect geometry, which is visible when using the
dashboard after changing the scaling factor.


(cherry picked from commit 8c48ca59136288cc18da86b92de6ce0603924b2b)

Co-authored-by: Niccolò Venerandi <niccolo@venerandi.com>

M  +0    -1    applets/kicker/dashboardwindow.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/661f35893946bbdfa886d703670108cf1a9e66dd