Make Dashboard not call resize just before showing full screen

The call to showFullScreen will set the correct size for the screen;
adding another call to resize just before showing will make the content
preserve the old incorrect geometry, which is visible when using the
dashboard after changing the scaling factor.

BUG:495927


(cherry picked from commit 8c48ca59136288cc18da86b92de6ce0603924b2b)

Co-authored-by: Niccolò Venerandi <niccolo@venerandi.com>